5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1836_1278.log
== TEST (2019-07-02 00:18:47) 
-- CODE:
from numpy import *
p = int(input("s: "))
mt = ones((p,p), dtype=int)

for x in range(p):
	for y in range(p):
		if(x<y):
			mt[x,y]= x + 1
		elif(y>x):
			mt[x,y] = y + 1
		else:
			mt[x,y] = y + 1
print(mt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:32:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
mt = array([[0,2,11,6,15,11,1], 
				[2,0,7,12,4,2,15],
				[11,7,0,11,8,3,13], 
				[6,12,11,0,10,2,1], 
				[15,4,8,10,0,5,13], 
				[11,2,3,2,5,0,14], 
				[1,15,13,1,13,14,0]])
c1 = int(input('m: '))
c2 = int(input('v: '))
a = 0
while(c2 != -1):
	a += b[c1//111-1,c2//111 - 1]
	c1 = c2
	c2 = int(input('m: '))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 00:32:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
mt = array([[0,2,11,6,15,11,1], 
				[2,0,7,12,4,2,15],
				[11,7,0,11,8,3,13], 
				[6,12,11,0,10,2,1], 
				[15,4,8,10,0,5,13], 
				[11,2,3,2,5,0,14], 
				[1,15,13,1,13,14,0]])
c1 = int(input('m: '))
c2 = int(input('v: '))
a = 0
while(c2 != -1):
	a += b[c1//111-1,c2//111 - 1]
	c1 = c2
	c2 = int(input('m: '))
print(a)
-- EXECUTION TIME:
1.12316
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1278/main.py", line 14, in <module>
    a += b[c1//111-1,c2//111 - 1]
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:32:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
mt = array([[0,2,11,6,15,11,1], 
				[2,0,7,12,4,2,15],
				[11,7,0,11,8,3,13], 
				[6,12,11,0,10,2,1], 
				[15,4,8,10,0,5,13], 
				[11,2,3,2,5,0,14], 
				[1,15,13,1,13,14,0]])
c1 = int(input('m: '))
c2 = int(input('v: '))
a = 0
while(c2 != -1):
	a += b[c1//111-1,c2//111 - 1]
	c1 = c2
	c2 = int(input('m: '))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 00:32:48) 
-- CODE:
from numpy import *
from numpy.linalg import *
mt = array([[0,2,11,6,15,11,1], 
				[2,0,7,12,4,2,15],
				[11,7,0,11,8,3,13], 
				[6,12,11,0,10,2,1], 
				[15,4,8,10,0,5,13], 
				[11,2,3,2,5,0,14], 
				[1,15,13,1,13,14,0]])
c1 = int(input('m: '))
c2 = int(input('v: '))
a = 0
while(c2 != -1):
	a += mt[c1//111-1,c2//111 - 1]
	c1 = c2
	c2 = int(input('m: '))
print(a)
-- EXECUTION TIME:
1.22792
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
